<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.sharingang.viewmodels.ARViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ar.ARActivity">

        <TextView
            android:id="@+id/ar_item_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.itemLocation.toString()}" />

        <TextView
            android:id="@+id/ar_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.heading.toString()}" />

        <TextView
            android:id="@+id/ar_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.location.toString()}" />

        <TextView
            android:id="@+id/ar_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.distance.toString()}" />
        <TextView
            android:id="@+id/ar_required_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.requiredHeading.toString()}" />

    </LinearLayout>
</layout>