...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/itemTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{item.title}"
                android:textSize="30sp"
                tools:text="Title" />

...
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/themeColor"
                android:contentDescription="@string/weather"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/locateButton"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/baseline_thermostat_white_24dp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/locateButton"
                android:layout_width="wrap_content"
...
