<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="description"
            type="String" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".NewItemActivity">

        <TextView
            android:id="@+id/newItemPrompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_item"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editItemDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/description"
            android:importantForAutofill="no"
            android:inputType="textMultiLine|textPersonName"
            android:singleLine="false"
            android:text="@={description}"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/createItemButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="createNewItem"
            android:text="@string/create_item" />

    </LinearLayout>
</layout>