<resources>
    <string name="app_name">Sharingang</string>
    <string name="new_item">New Item</string>
    <string name="description">Description</string>
    <string name="create_item">Create Item</string>
    <string name="go_to_map">Go to Map</string>
    <string name="edit">Edit</string>
    <string name="edit_item">Edit Item</string>
    <string name="delete_item">Delete Item</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
...
